# fastapi-ai-template

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  tnp.md  todo.md
src/: config.py  main.py
src/auth/: auth_utils.py
src/chat_models/: chat_model_interface.py
src/models/: auth.py  chat_models.py
src/routers/: auth.py  chat_models.py
src/utils/: gcp.py
